refactor: FcmClient 초기화 로직 수정